src/objects/ADvendio__Invoice__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AccountingDate__c</fullName>
        <label>Accounting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__AccountingEndDate__c</fullName>
        <label>Accounting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingCity__c</fullName>
        <label>Advertiser Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingCountry__c</fullName>
        <label>Advertiser Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingPostalCode__c</fullName>
        <label>Advertiser Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingState__c</fullName>
        <label>Advertiser Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingStreet__c</fullName>
        <label>Advertiser Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserBillingStreets__c</fullName>
        <label>Advertiser Billing Streets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserContactEmail__c</fullName>
        <label>Advertiser Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserContactFax__c</fullName>
        <label>Advertiser Contact Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserContactPhone__c</fullName>
        <label>Advertiser Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserContact__c</fullName>
        <label>Advertiser Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserDebitorId__c</fullName>
        <label>Advertiser Debtor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserId__c</fullName>
        <description>Internal Id for the referenced Advertiser</description>
        <label>Advertiser Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserName__c</fullName>
        <label>Advertiser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserNumber__c</fullName>
        <label>Advertiser Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserVATId__c</fullName>
        <label>Advertiser VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingCity__c</fullName>
        <label>Agency Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingCountry__c</fullName>
        <label>Agency Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingPostalCode__c</fullName>
        <label>Agency Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingState__c</fullName>
        <label>Agency Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingStreet__c</fullName>
        <label>Agency Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyBillingStreets__c</fullName>
        <label>Agency Billing Streets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyContactEmail__c</fullName>
        <label>Agency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyContactFax__c</fullName>
        <label>Agency Contact Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyContactPhone__c</fullName>
        <label>Agency Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyContact__c</fullName>
        <label>Agency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyDebitorId__c</fullName>
        <label>Agency Debtor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyId__c</fullName>
        <description>Internal Id for the referenced Agency</description>
        <label>Agency Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyName__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyNumber__c</fullName>
        <label>Agency Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyVATId__c</fullName>
        <label>Agency VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingCity__c</fullName>
        <label>Beneficiary Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingCountry__c</fullName>
        <label>Beneficiary Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingPostalCode__c</fullName>
        <label>Beneficiary Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingState__c</fullName>
        <label>Beneficiary Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingStreet__c</fullName>
        <label>Beneficiary Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryBillingStreets__c</fullName>
        <label>Beneficiary Billing Streets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryDebitorId__c</fullName>
        <label>Beneficiary Debtor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryId__c</fullName>
        <description>Internal Id for the referenced beneficiary</description>
        <label>Beneficiary Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryName__c</fullName>
        <label>Beneficiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryNumber__c</fullName>
        <label>Beneficiary Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BeneficiaryVATId__c</fullName>
        <label>Beneficiary VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingPeriodEndDate__c</fullName>
        <inlineHelpText>Monat der erstellten Rechnung (kann abweichen vom SAP Datum)</inlineHelpText>
        <label>Billing Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingPeriodStartDate__c</fullName>
        <label>Billing Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillingRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Run</label>
        <referenceTo>ADvendio__BillingRun__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignName__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CreationType__c</fullName>
        <label>Creation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__DaysEarlyPaymentDiscount__c</fullName>
        <label>Days Early Payment Discount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Dispatch__c</fullName>
        <label>Invoice Dispatch Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Print</fullName>
                    <default>true</default>
                    <label>Print</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__EarlyPaymentDiscountAbs__c</fullName>
        <description>This field shows the absolute amount of the early payment discount.</description>
        <formula>IF(ADvendio__NewVatCalculation__c,
ROUND(ADvendio__InvoicedAmountTotal__c * ADvendio__Early_Payment_Discount__c,2),
ROUND(IF(ADvendio__ShowThirdPartyCommission__c, ADvendio__InvoicedAmountGross__c * ADvendio__Early_Payment_Discount__c, ADvendio__InvoicedAmountGrossN2__c * ADvendio__Early_Payment_Discount__c),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Payment Discount abs.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Early_Payment_Discount__c</fullName>
        <description>Enter a percentage to grant an early payment discount.</description>
        <inlineHelpText>Enter a percentage to grant an early payment discount.</inlineHelpText>
        <label>Early Payment Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalMediaCampaignName__c</fullName>
        <label>External Media Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__GrossAmountB1__c</fullName>
        <label>Gross Amount B1</label>
        <summarizedField>ADvendio__InvoiceItem__c.ADvendio__GrossAmountB1__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__ItemRecordType__c</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__GrossAmountB2__c</fullName>
        <label>Gross Amount B2</label>
        <summarizedField>ADvendio__InvoiceItem__c.ADvendio__GrossAmountB2__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__ItemRecordType__c</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__GrossAmountB3__c</fullName>
        <label>Gross Amount B3</label>
        <summarizedField>ADvendio__InvoiceItem__c.ADvendio__GrossAmountB3__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__ItemRecordType__c</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingCity__c</fullName>
        <label>Intermediary Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingCountry__c</fullName>
        <label>Intermediary Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingPostalCode__c</fullName>
        <label>Intermediary Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingState__c</fullName>
        <label>Intermediary Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingStreet__c</fullName>
        <label>Intermediary Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryBillingStreets__c</fullName>
        <label>Intermediary Billing Streets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryDebitorId__c</fullName>
        <label>Intermediary Debtor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryId__c</fullName>
        <description>Internal Id for the referenced Intermediary</description>
        <label>Intermediary Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryName__c</fullName>
        <label>Intermediary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryNumber__c</fullName>
        <label>Intermediary Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IntermediaryVATId__c</fullName>
        <label>Intermediary VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceDateManual__c</fullName>
        <label>Invoice Date (Manual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceEmailAddress__c</fullName>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceFullNumber__c</fullName>
        <formula>ADvendio__InvoiceNumberPrefix__c &amp; IF(ISBLANK(ADvendio__InvoiceLegalEntityNumber__c), Name, ADvendio__InvoiceLegalEntityNumber__c) &amp; ADvendio__InvoiceNumberSuffix__c</formula>
        <label>Invoice Full Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceLegalEntityNumber__c</fullName>
        <label>Invoice Legal Entity Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceNumberPrefix__c</fullName>
        <label>Invoice Number Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceNumberSuffix__c</fullName>
        <label>Invoice Number Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>ADvendio__InvoiceNumber__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceType__c</fullName>
        <description>Depending on the type (invoice, credit note, credit note cancellation, cancellation) invoices are treated in a different way.</description>
        <inlineHelpText>Ist die Rechnung vom Rechnungs-Typ her eine Rechnung oder aber eine Aufhebung bzw. Stornierung zu einer vorher erstellten und existierenden Rechnung (Rechnungsanpassung).</inlineHelpText>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Credit Note Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>ADvendio__Invoice__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountGrossInclEpd__c</fullName>
        <description>This field shows the invoiced amount less early payment discount.</description>
        <formula>IF(ADvendio__NewVatCalculation__c,
ADvendio__InvoicedAmountTotal__c - ADvendio__EarlyPaymentDiscountAbs__c,
IF(ADvendio__ShowThirdPartyCommission__c, ADvendio__InvoicedAmountGross__c - ADvendio__EarlyPaymentDiscountAbs__c, ADvendio__InvoicedAmountGrossN2__c - ADvendio__EarlyPaymentDiscountAbs__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoiced Amount Gross (incl. EPD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountGrossN2__c</fullName>
        <description>Invoiced Amount (N2) including VAT</description>
        <formula>ADvendio__InvoicedAmountNet2__c + ADvendio__VATAmount1__c + ADvendio__VATAmount2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoiced Amount (N2) including VAT</inlineHelpText>
        <label>Invoiced Amount Gross (N2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountGrossVATRate1__c</fullName>
        <label>Invoiced Amount gross (normal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountGrossVATRate2__c</fullName>
        <label>Invoiced Amount Gross (reduced)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountGross__c</fullName>
        <description>Gross Amount (N3) including VAT</description>
        <formula>ADvendio__InvoicedAmountNet3__c +  ADvendio__VATAmount1__c +   ADvendio__VATAmount2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoiced Amount Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountNet1__c</fullName>
        <label>Invoiced Amount N1</label>
        <summarizedField>ADvendio__InvoiceItem__c.ADvendio__InvoicedAmountNet1__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__ItemRecordType__c</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountNet2__c</fullName>
        <label>Invoiced Amount N2</label>
        <summarizedField>ADvendio__InvoiceItem__c.ADvendio__InvoicedAmountNet2__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__ItemRecordType__c</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountNet3__c</fullName>
        <label>Invoiced Amount N3</label>
        <summarizedField>ADvendio__InvoiceItem__c.ADvendio__InvoicedAmountNet3__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__ItemRecordType__c</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountTotal__c</fullName>
        <description>This formula calculates the sum of your taxable amount (depending on your type settings) and adds the taxes to it and if applicable, the nontaxable amount.</description>
        <formula>ADvendio__TaxableAmountTotal__c + ADvendio__VatTotal__c + ADvendio__NonTaxableAmountTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula calculates the sum of your taxable amount (depending on your type settings) and adds the taxes to it and if applicable, the nontaxable amount.</inlineHelpText>
        <label>Invoiced Amount Gross (Total)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountVatType1__c</fullName>
        <description>This formula calculates the sum of all items of type 1 and adds the VAT.</description>
        <formula>ADvendio__TaxableAmountVatType1__c + ADvendio__VATAmount1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula calculates the sum of all items of type 1 and adds the VAT.</inlineHelpText>
        <label>Invoiced Amount Gross (VAT Type 1)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountVatType2__c</fullName>
        <description>This formula calculates the sum of all items of type 2 and adds the VAT.</description>
        <formula>ADvendio__TaxableAmountVatType2__c + ADvendio__VATAmount2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula calculates the sum of all items of type 2 and adds the VAT.</inlineHelpText>
        <label>Invoiced Amount Gross (VAT Type 2)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiveRecipient__c</fullName>
        <description>Enter the account who is Debtor (Invoice Recipient) for the invoice.</description>
        <label>Debtor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__IsMerged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ItemsOnPDF__c</fullName>
        <label>Items on PDF</label>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__ShowOnPDF__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__KeyExtension__c</fullName>
        <displayFormat>|KEY-{000000000}|</displayFormat>
        <label>KeyExtension</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ADvendio__LegalEntityCountry__c</fullName>
        <label>Legal Entity Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__N3__c</fullName>
        <label>N3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__NewVatCalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New VAT Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__NonTaxableAmountTotal__c</fullName>
        <description>Displays the total amount of all invoice items sold which are nontaxable or have a tax exempt.</description>
        <inlineHelpText>Displays the total amount of all invoice items sold which are nontaxable or have a tax exempt.</inlineHelpText>
        <label>Nontaxable Amount (Total)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__OrderExtNumber__c</fullName>
        <label>External Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__OrderNumber__c</fullName>
        <label>Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentDueDate__c</fullName>
        <label>Payment Due Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentInterval__c</fullName>
        <label>Payment Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentStart__c</fullName>
        <label>Payment Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentTerms__c</fullName>
        <inlineHelpText>Payment Terms to be displayed on Invoice PDFs</inlineHelpText>
        <label>Payment Terms</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingCity__c</fullName>
        <label>Postal-Recipient Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingCountry__c</fullName>
        <label>Postal-Recipient Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingPostalCode__c</fullName>
        <label>Postal-Recipient Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingState__c</fullName>
        <label>Postal-Recipient Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingStreet__c</fullName>
        <label>Postal-Recipient Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientBillingStreets__c</fullName>
        <label>Postal Recipient Billing Streets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientDebitorId__c</fullName>
        <label>Postal-Recipient Debtor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientId__c</fullName>
        <description>Internal Id for the referenced PostalRecipient</description>
        <label>Postal-Recipient Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientName__c</fullName>
        <label>Postal-Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientNumber__c</fullName>
        <label>Postal-Recipient Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipientVATId__c</fullName>
        <label>Postal-Recipient VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PreInvoiceNumber__c</fullName>
        <description>Preliminary Invoice Number that identifies the name of the record after creation. (copied by workflow) It will later be overwritten by the final invoice number.</description>
        <displayFormat>PreInvoice-{000000}</displayFormat>
        <inlineHelpText>Preliminary Invoice Number that identifies the name of the record after creation. It will later be overwritten by the final invoice number</inlineHelpText>
        <label>Pre-Invoice Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ADvendio__QuoteLanguage__c</fullName>
        <description>Language to use for generated invoice.</description>
        <inlineHelpText>Language to use for generated invoice.</inlineHelpText>
        <label>QuoteLanguage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__QuoteLocale__c</fullName>
        <description>Locale to use for formatting the number, date etc. in generated invoice.</description>
        <inlineHelpText>Locale to use for formatting the number, date etc. in generated invoice.</inlineHelpText>
        <label>QuoteLocale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>de_DE</fullName>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount1__c</fullName>
        <label>Quantity Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount2__c</fullName>
        <label>Customer Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateDiscount3__c</fullName>
        <label>Agency Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingCity__c</fullName>
        <label>Debtor Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingCountry__c</fullName>
        <label>Debtor Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingPostalCode__c</fullName>
        <label>Debtor Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingState__c</fullName>
        <label>Debtor Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingStreet__c</fullName>
        <label>Debtor Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientBillingStreets__c</fullName>
        <label>Debtor Billing Streets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientContactEmail__c</fullName>
        <label>Debtor Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientContactFax__c</fullName>
        <label>Debtor Contact Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientContactPhone__c</fullName>
        <label>Debtor Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>